circle ci update

--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
   "scripts": {
     "test": "npx hardhat test",
     "compile": "npx hardhat compile",
-    "deploy": "npx hardhat deploy --network"
+    "deploy": "npx hardhat deploy --network",
+    "test:ci": "SILENT=true node --max-old-space-size=4096 ./node_modules/.bin/nyc --reporter=lcov --exclude '**/sc_temp/**' --exclude '**/test/**/' -- mocha test/onPlanetTest.ts --timeout 100000 --no-warnings --exit",
+    "deploy-ganache": "npx truffle migrate --reset --network development",
+    "coverage": "./node_modules/.bin/solidity-coverage",
+    "test:debug": "node --max-old-space-size=4096 ./node_modules/.bin/mocha test/units/* --timeout 100000 --no-warnings --exit"
   },
   "author": "",
   "license": "MIT",
@@ -34,7 +38,9 @@
     "truffle-flattener": "^1.5.0",
     "ts-node": "^10.4.0",
     "typechain": "^7.0.0",
-    "typescript": "^4.5.5"
+    "typescript": "^4.5.5",
+    "mocha": "5.2.0",
+    "nyc": "^14.1.1"
   },
   "dependencies": {
     "@openzeppelin/cli": "^2.8.2",
