--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,10 +21,10 @@ jobs:
           name: Install dependencies
           command: |
             yarn
-      - run:
-          name: Hardhat compile
-          command: |
-            npx hardhat compile
+      # - run:
+      #     name: Hardhat compile
+      #     command: |
+      #       npx hardhat compile
       # - run:
       #     name: Generate coverage
       #     command: |
