--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ jobs:
       - run:
           name: Delete any old node_modules
           command: |
-            rm -rf node_modules/
+            rm -rf node_modules && rm -rf cache && rm -rf artifacts
       - run:
           name: Install Hardhat
           command: |
