Updated config. file

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,18 +21,18 @@ jobs:
           name: Install dependencies
           command: |
             yarn
-      - run:
-          name: Hardhat compile
-          command: |
-            npx hardhat compile
+      # - run:
+      #     name: Hardhat compile
+      #     command: |
+      #       npx hardhat compile
       - run:
           name: Generate coverage
           command: |
             npx hardhat coverage
-      - run:
-          name: Run tests
-          command: |
-            npm run test:ci
+      # - run:
+      #     name: Run tests
+      #     command: |
+      #       npm run test:ci
       - run:
           name: Upload coverage
           command: |
