--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nomiclabs/buidler": "^1.4.8",
     "@nomiclabs/hardhat-ethers": "^2.0.2",
     "@nomiclabs/hardhat-etherscan": "^2.1.5",
+    "@nomiclabs/hardhat-ganache": "^2.0.1",
     "@nomiclabs/hardhat-truffle5": "^2.0.0",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@nomiclabs/hardhat-web3": "^2.0.0",
@@ -28,6 +29,7 @@
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.4.6",
     "hardhat": "^2.6.1",
+    "solidity-coverage": "^0.7.19",
     "truffle-flattener": "^1.5.0",
     "ts-node": "^10.4.0",
     "typechain": "^7.0.0",
@@ -39,6 +41,7 @@
     "@openzeppelin/contracts": "^4.1.0",
     "@openzeppelin/contracts-ethereum-package": "^3.0.0",
     "dotenv": "^9.0.2",
-    "openzeppelin-solidity": "^4.1.0"
+    "openzeppelin-solidity": "^4.1.0",
+    "web3": "^1.7.0"
   }
 }
