circle ci config. file updated

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,18 +25,18 @@ jobs:
           name: Hardhat compile
           command: |
             npx hardhat compile
-      - run:
-          name: Generate coverage
-          command: |
-            npx hardhat coverage
       # - run:
       #     name: Run tests
       #     command: |
-      #       npm run test:ci
+      #       npx hardhat test
       - run:
-          name: Upload coverage
+          name: Run tests
           command: |
-            bash <(curl -s https://codecov.io/bash)
+            npm run test:ci
+      # - run:
+      #     name: Upload coverage
+      #     command: |
+      #       bash <(curl -s https://codecov.io/bash)
       - store_test_results:
           path: test-results
 
